# task

./: .gitignore  MUJOCO_LOG.TXT  NOTES.md  README.md  flake.nix  litert_gpu_server.py  pyproject.toml  q.md
src/mjlab_textop/: plugin.py
src/mjlab_textop/core/: motion.py  normalize.py  normalize_robotmdar_npz.py  normalize_robotmdar_record.py  normalize_tracker_npz.py  onnx_policy.py  robotmdar.py  robotmdar_record.py  schema.py  task.py
src/mjlab_textop/core/feedback/: observation.py
src/mjlab_textop/core/mdp/: future_reference.py  observations.py  offline_commands.py  online_commands.py
src/mjlab_textop/core/online/: buffer.py  live.py  replay.py  source.py
src/mjlab_textop/robotmdar/: feedback.py  planner.py  produce.py  record.py  vlm_server.py
src/mjlab_textop/robotmdar/planner/: __init__.py  base.py  feedback.py  manual.py  selector.py  vlm.py
src/mjlab_textop/scripts/: cli.py  commands.py  eval.py  normalize_robotmdar_npz.py  normalize_robotmdar_record.py  normalize_tracker_npz.py  play_live.py  play_online.py  policy.py  robotmdar_record.py  textop.py  utils.py
src/mjlab_textop/tasks/: __init__.py
src/mjlab_textop/tasks/online_textop/: __init__.py  env_cfg.py  ppo_cfg.py  registration.py
src/mjlab_textop/tasks/textop_tracking/: __init__.py  env_cfg.py  registration.py
src/mjlab_textop_playground/: __init__.py  textop_motion.py
src/mjlab_textop_playground/scripts/: normalize_textop_npz.py
src/mjlab_vla/: __init__.py  tracking.py
src/mjlab_vla/scripts/: cli.py  config.py  eval_textop_motion.py  normalize_textop_motion.py  play_textop_motion.py  train_textop_motion.py
src/mjlab_vla/textop/: __init__.py  task.py
src/mjlab_vla/textop/mdp/: online_commands.py
src/mjlab_vla/textop/script/: __init__.py  cli.py  eval.py  motion.py  normalize.py  play.py  robotmdar_producer.py  train.py
tests/: test_textop_motion.py
tests/textop/: test_commands.py  test_feedback_observation.py  test_live_source.py  test_motion.py  test_observations.py  test_online.py  test_onnx_policy.py  test_robotmdar.py  test_robotmdar_planner.py  test_robotmdar_vlm_server.py  test_task.py
