[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-vla"
version = "0.1.0"
description = "TextOp motion normalization utilities for MJLab"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.4.6",
]

[project.optional-dependencies]
cpu = ["mjlab", "torch>=2.7.0"]
cu128 = ["mjlab", "torch>=2.7.0"]

[project.scripts]
textop-tracking = "mjlab_vla.scripts.cli:main"

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab", rev = "0cdc56246999409b83622764f5b38edb660cf16e" }
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
]
mujoco = { index = "mujoco" }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "e65a72e49a978a3051e7942bc5591df355ba0b5c" }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

[tool.uv]
conflicts = [
  [{ extra = "cpu" }, { extra = "cu128" }],
]
override-dependencies = ["mujoco>=3.8.0.dev0"]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B011"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.14",
  "ty>=0.0.14",
]
